--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -1,1 +1,8 @@
 <link rel="shortcut icon" type="image/x-icon" href="/BoxBuddyRS/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/BoxBuddyRS/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/BoxBuddyRS/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/BoxBuddyRS/favicon-16x16.png">
+<link rel="manifest" href="/BoxBuddyRS/site.webmanifest">
+<link rel="mask-icon" href="/BoxBuddyRS/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
